Phase 3 - Step 7:refactor(storage): rapikan abstraksi upload MinIO
